--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "undici": "^4.5.0"
   },
   "dependencies": {
+    "@vercel/node": "^1.12.1",
     "axios": "^0.21.1",
     "rollup-plugin-polyfill-node": "^0.7.0",
     "sirv-cli": "^1.0.0"
