--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
-  "name": "svelte-app",
+  "name": "degree-of-separation-steam",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+  "author": "Przemek Kaminski <przemyslaw.m.kaminski@gmail.com> (https://www.linkedin.com/in/przemekkaminski/)",
+  "dependencies": {
+    "express": "^4.17.1",
+    "undici": "^4.5.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
-    "rollup": "^2.3.4",
+    "@types/express": "^4.17.13",
+    "rollup": "^2.56.3",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sirv-cli": "^1.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "undici": "^4.5.0"
+    "typescript": "^4.0.0"
   },
-  "dependencies": {
-    "@vercel/node": "^1.12.1",
-    "axios": "^0.21.1",
-    "rollup-plugin-polyfill-node": "^0.7.0",
-    "sirv-cli": "^1.0.0"
-  }
+  "private": true,
+  "scripts": {
+    "build": "rollup -c",
+    "build-server": "cd ./src/server && tsc",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "dev": "rollup -c -w",
+    "heroku-postbuild": "npm run build && npm run build-server",
+    "start": "sirv public --no-clear",
+    "start-server": "npm run build && npm run build-server && node ./server-dist/main.js"
+  },
+  "type": "module"
 }
