--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "4.3.5"
+    "typescript": "4.4.3"
   },
   "engines": {
     "node": "16.x",
@@ -37,7 +37,7 @@
     "dev": "rollup -c -w",
     "heroku-postbuild": "npm run build && npm run build-server",
     "start": "sirv public --no-clear",
-    "start-server": "node ./server-dist/main.js"
+    "start-server": "node server-dist/main.js"
   },
   "type": "module"
 }
