--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
   },
 
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*", "api/*", "src/server/*"]
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*", "src/server/*", "server-dist"]
 }
