--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "4.4.3"
+    "typescript": "^4.0.0"
   },
   "engines": {
     "node": "16.x",
