--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,6 @@
     "sourceMap": true
   },
 
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*", "src/server/*", "server-dist"]
+  "include": ["src"],
+  "exclude": ["public/*"]
 }
