--- a/package.json
+++ b/package.json
@@ -2,42 +2,16 @@
   "name": "degrees-of-separation-steam",
   "version": "1.0.0",
   "author": "Przemek Kaminski <przemyslaw.m.kaminski@gmail.com> (https://www.linkedin.com/in/przemekkaminski/)",
-  "dependencies": {
-    "express": "^4.17.1",
-    "sirv-cli": "^1.0.0",
-    "undici": "^4.5.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.1",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@tsconfig/svelte": "^3.0.0",
-    "@types/express": "^4.17.13",
-    "rollup": "^2.62.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
-  },
-  "engines": {
-    "node": "16.x",
-    "npm": "8.x"
-  },
+  "license": "ISC",
+  "packageManager": "yarn@3.1.1",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "build-all": "npm run build && npm run build-server",
-    "build-server": "cd ./src/server && tsc",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "dev": "rollup -c -w",
-    "heroku-postbuild": "npm run build-all",
-    "start": "sirv public --no-clear",
-    "start-server": "node server-dist/server/server.js"
+    "build": "yarn workspaces foreach run build",
+    "start": "yarn workspace server start"
   },
-  "type": "module"
+  "workspaces": [
+    "client",
+    "server",
+    "shared"
+  ]
 }
