--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,6 @@
 {
   "compilerOptions": {
     "target": "es2021",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,9 +13,7 @@
     "isolatedModules": true,
     "alwaysStrict": true,
     "sourceMap": true,
-    "outDir": "../../server-dist"
+    "outDir": "dist"
   },
-  "include": [
-    "./**/*"
-  ]
+  "include": ["src"]
 }
