Migrated project into monorepo - fix

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "alwaysStrict": true,
     "sourceMap": true,
+    "rootDir": "src",
     "outDir": "dist"
   },
   "include": ["src"]
