--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,6 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "dependencies": {
-    "shared": "workspace:^"
-  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.1",
@@ -14,6 +11,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "shared": "workspace:^",
     "sirv-cli": "^1.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
