--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "yarn@3.1.1",
   "private": true,
   "scripts": {
-    "build": "yarn workspaces foreach run build",
+    "build": "yarn workspaces foreach -v --topological-dev run build",
     "start": "yarn workspace server start"
   },
   "workspaces": [
