--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "packageManager": "yarn@3.1.1",
   "private": true,
+  "cacheDirectories": [".yarn/cache"],
   "scripts": {
     "build": "yarn workspaces foreach -v --topological-dev run build",
     "start": "yarn workspace server start"
