--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,11 @@
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-svelte3": "^3.2.1",
     "rollup": "^2.62.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -24,6 +29,7 @@
     "build": "rollup -c",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "dev": "rollup -c -w",
+    "lint": "eslint ./src/**/*.{ts,svelte}",
     "start": "sirv public --no-clear"
   },
   "type": "module"
