--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "license": "ISC",
   "packageManager": "yarn@3.1.1",
   "private": true,
-  "cacheDirectories": [".yarn/cache"],
+  "devDependencies": {
+    "@types/eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.6.0",
+    "typescript": "^4.0.0"
+  },
   "scripts": {
     "build": "yarn workspaces foreach -v --topological-dev run build",
-    "start": "yarn workspace server start"
+    "start": "yarn workspace server start",
+    "lint": "yarn workspaces foreach -v run lint"
   },
   "workspaces": [
     "client",
