--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.17.1",
+    "http-status-codes": "^2.2.0",
+    "shared": "workspace:^",
     "undici": "^4.5.0"
   },
   "devDependencies": {
+    "@types/eslint": "^8",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.5",
-    "shared": "workspace:^",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.6.0",
     "typescript": "^4.0.0"
   },
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint ./src/**/*.ts",
     "start": "node ./dist/server.js"
   },
   "type": "module"
