--- a/shared/package.json
+++ b/shared/package.json
@@ -4,9 +4,14 @@
   "main": "dist/index.js",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint ./src/**/*.ts"
   },
   "devDependencies": {
+    "@types/eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.6.0",
     "typescript": "^4.0.0"
   },
   "types": "dist/index.d.ts"
