--- a/shared/package.json
+++ b/shared/package.json
@@ -1,12 +1,6 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "packageManager": "yarn@3.1.1",
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint ./src/**/*.ts"
-  },
   "devDependencies": {
     "@types/eslint": "^8",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -14,5 +8,12 @@
     "eslint": "^8.6.0",
     "typescript": "^4.0.0"
   },
+  "main": "dist/index.js",
+  "packageManager": "yarn@3.1.1",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint ./src/**/*.ts"
+  },
+  "type": "module",
   "types": "dist/index.d.ts"
 }
