--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
   },
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b --verbose",
     "lint": "eslint ./src/**/*.ts",
     "start": "node ./dist/server.js"
   },
