--- a/shared/package.json
+++ b/shared/package.json
@@ -11,9 +11,8 @@
   "main": "dist/index.js",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b --verbose",
     "lint": "eslint ./src/**/*.ts"
   },
-  "type": "module",
-  "types": "dist/index.d.ts"
+  "type": "module"
 }
