--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "es2022",
     "moduleResolution": "node",
     "isolatedModules": true,
     "alwaysStrict": true,
