--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "target": "es2021",
-    "module": "es2022",
-    "sourceMap": true
+    "target": "ESNext",
+    "module": "ESNext",
+    "sourceMap": true,
   },
   "include": ["src/**/*"]
 }
